# VitraePluginOpenGL

./: .gitmodules  CMakeLists.txt  README.md
include/VitraePluginOpenGL/: Setup.hpp
include/VitraePluginOpenGL/Bits/: Naming.hpp  RenderBits.hpp
include/VitraePluginOpenGL/Specializations/: ConstantDefs.hpp  FrameStore.hpp  Mesh.hpp  Renderer.hpp  ShaderCompilation.hpp  SharedBuffer.hpp  Texture.hpp
include/VitraePluginOpenGL/Specializations/Compositing/: ClearRender.hpp  Compute.hpp  DataRender.hpp  IndexRender.hpp  SceneRender.hpp
include/VitraePluginOpenGL/Specializations/Shading/: Constant.hpp  FunctionCall.hpp  Header.hpp  Snippet.hpp
src/: Setup.cpp
src/Bits/: Naming.cpp  RenderBits.cpp
src/Specializations/: FrameStore.cpp  Mesh.cpp  Renderer.cpp  ShaderCompilation.cpp  SharedBuffer.cpp  Texture.cpp
src/Specializations/Compositing/: ClearRender.cpp  Compute.cpp  DataRender.cpp  IndexRender.cpp  SceneRender.cpp
src/Specializations/Shading/: Constant.cpp  FunctionCall.cpp  Header.cpp  Snippet.cpp
